Bug #8900
deadlock between netstack teardown and kstat read
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Start date:
2017-12-06
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Updated by Electric Monk about 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 84fe1120bdf58601e40698ac798bbbcabfc8cfb8
commit 84fe1120bdf58601e40698ac798bbbcabfc8cfb8 Author: Dan McDonald <danmcd@joyent.com> Date: 2017-12-11T15:27:04.000Z 8900 deadlock between netstack teardown and kstat read Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: Ryan Zezeski <rpz@joyent.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Gordon Ross <gordon.ross@nexenta.com>