8900 deadlock between netstack teardown and kstat read Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: Ryan Zezeski <rpz@joyent.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Gordon Ross <gordon.ross@nexenta.com>